# home-api

./: .env  .gitignore  Cargo.toml  README.md  cargo.schema.json  home.db-shm  home.db-wal  requests.rest
migrations/: 20230401025051_initial_setup.sql
src/: db_sqlite.rs  deserializers.rs  main.rs  validation.rs
src/demos/: db.rs  mod.rs  parsing.rs
